--- a/app/views/Data/Workspace/styles.module.css
+++ b/app/views/Data/Workspace/styles.module.css
@@ -16,11 +16,11 @@
 
         .workspace-item {
             display: flex;
-            border-left: 2px solid transparent;
+            border: 1px solid transparent;
         }
 
         .active {
-            border-left: 2px solid var(--mantine-color-brand-5);
+            border: 1px solid var(--mantine-color-brand-5);
         }
     }
 }
